add start button to css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="bodyContainer">
-
+        
         <div class="mainCharacterView left" >
                 <div class="nameBox">USS Schwarzenegger</div>
                 <div class="playerImage">
@@ -27,6 +27,7 @@
 
         </div>
 
+        <div class="button">Click the button to start the game!<button class="start">Start<br>Game</button></div>
 
         <div class="mainCharacterView right">
            
