working js basics

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script defer src="battle.js" ></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <script text="type/javascript" defer src="battle.js" ></script>
 </head>
 <body>
     <div class="bodyContainer">
@@ -39,8 +40,5 @@
                     Accuracy : .6 <br>
                 </div>       
         </div>
-
-
-    <script src="app.js"></script>
 </body>
 </html>
