--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="mainCharacterView right">
            
-            <div class="nameBox">Enemy</div>
+            <div class="nameBox" class="enemyName">Enemy</div>
             <div class="enemyImage"></div>
                 <div class="enemyStats">
                     <!-- Hull : 6 <br>
