--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
             <div class="nameBox" class="enemyName">Enemy</div>
             <div class="enemyImage"></div>
                 <div class="enemyStats">
-                    <!-- Hull : 6 <br>
+                    <!-- Ships: 5<br>
+                    Hull : 6 <br>
                     FirePower : 3 <br>
-                    Accuracy : .6 <br> -->
+                    Accuracy : .6 <br>  -->
                 </div>       
         </div>
 </body>
